[gd_scene load_steps=2 format=3 uid="uid://bbkj4d7qw1nai"]

[ext_resource type="Script" path="res://scripts/pitch_or_ditch.gd" id="1_v5m9h"]

[node name="PitchOrDitch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5m9h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="ZoomMeeting" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VCAvatar" type="ColorRect" parent="ZoomMeeting"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_vertical = 0
color = Color(0.8, 0.8, 0.9, 1)

[node name="VCName" type="Label" parent="ZoomMeeting/VCAvatar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
text = "Chad Venture"
horizontal_alignment = 1

[node name="PatagoniaVest" type="ColorRect" parent="ZoomMeeting/VCAvatar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.5, 0.6, 1)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0
text = "ðŸ’¼ PITCH OR DITCH ðŸ’¼"
horizontal_alignment = 1

[node name="ScenarioText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][color=cyan]You're pitching to Chad from Venture Vibes Capital. He loves synergy, scalability, and probably owns 17 Patagonia vests.[/color][/center]"

[node name="PitchPrompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 180.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2
text = "Complete the pitch: 'Our farming app will revolutionize agriculture by...'"
horizontal_alignment = 1

[node name="BuzzwordButtons" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="SynergyBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "leveraging synergy"

[node name="DisruptBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "disrupting disruption"

[node name="ScaleBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "scaling at scale"

[node name="AIBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "AI-powered growth"

[node name="BlockchainBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "blockchain farming"

[node name="UnicornBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "unicorn potential"

[node name="ActualBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "growing actual food"

[node name="CommunityBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "building community"

[node name="SustainableBtn" type="Button" parent="BuzzwordButtons"]
layout_mode = 2
text = "sustainable practices"

[node name="StressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 300.0
offset_right = 200.0
offset_bottom = 330.0
grow_horizontal = 2
max_value = 100.0
value = 50.0

[node name="StressLabel" type="Label" parent="StressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Stress Level"
horizontal_alignment = 1

[node name="VCReaction" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center][color=white]Chad is waiting for your pitch...[/color][/center]"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "ðŸ’° VC Score: 0"

[node name="ResultTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
